--- a/escom-bpm-web/src/main/webapp/view/admin/objects-right.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/objects-right.xhtml
@@ -143,6 +143,7 @@
         </p:tabView>
     
         <p:commandButton value="#{bundle.SaveChange}"
+                        rendered="#{metadatesBean.selectedObject != null}"
                         update="mainFRM:mainGrid"
                         actionListener="#{metadatesBean.onSaveChange()}">
         </p:commandButton>
