--- a/escom-bpm-web/src/main/webapp/view/processes/types/processtype-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/types/processtype-card.xhtml
@@ -9,10 +9,14 @@
     
     <ui:define name="extColumnsRights">
         <p:column headerText="#{bundle.CreateTypeProcesses}" styleClass="colRight">
-            <p:selectBooleanCheckbox value="#{right.addChild}" disabled="#{_bean.editedItem.inherits or _bean.isReadOnly()}"/>
+            <p:selectBooleanCheckbox value="#{right.addChild}" disabled="#{_bean.editedItem.inherits or _bean.isReadOnly()}">
+                <p:ajax process="@this" oncomplete="itemChange = 1;"/>
+            </p:selectBooleanCheckbox>
         </p:column>
         <p:column headerText="#{bundle.CreateProcesses}" styleClass="colRight">
-            <p:selectBooleanCheckbox value="#{right.addDetail}" disabled="#{_bean.editedItem.inherits or _bean.isReadOnly()}"/>
+            <p:selectBooleanCheckbox value="#{right.addDetail}" disabled="#{_bean.editedItem.inherits or _bean.isReadOnly()}">
+                <p:ajax process="@this" oncomplete="itemChange = 1;"/>
+            </p:selectBooleanCheckbox>
         </p:column>
     </ui:define>
 
