--- a/escom-bpm-web/src/main/webapp/view/tasks/task-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/tasks/task-card.xhtml
@@ -144,13 +144,8 @@
                                          itemLabel="#{bundle.EnterInApprovalSheet}" 
                                          rendered="#{taskCardBean.editedItem.scheme != null}"
                                          disabled="#{_bean.isTaskReadOnly()}">
-                    <p:ajax process="@this" listener="#{taskCardBean.onConsidInProcReportChange()}" update="infoConsidInProc" oncomplete="itemChange = 1;"/>
-                </p:selectBooleanCheckbox>
-                
-                <h:panelGrid id="infoConsidInProc" columns="2" styleClass="without-spaces">
-                    <p:graphicImage value="/resources/icon/importance-32.png" rendered="#{!taskCardBean.editedItem.considInProcReport}"/> 
-                    <p:outputLabel  value="#{msg.ResultApprovalNotAffectProcess}" rendered="#{!taskCardBean.editedItem.considInProcReport}"/>
-                </h:panelGrid>
+                    <p:ajax process="@this" listener="#{taskCardBean.onConsidInProcReportChange()}" oncomplete="itemChange = 1;"/>
+                </p:selectBooleanCheckbox>                
                 
                 <h:panelGrid columns="1" rendered="#{taskCardBean.editedItem.id != null and taskCardBean.editedItem.scheme != null}" >
                     <p:commandLink  value="#{bundle.GoToProcess}"
@@ -225,7 +220,9 @@
     
      <ui:define name="extColumnsRights">
         <p:column headerText="#{bundle.Execution}" styleClass="colRight">
-            <p:selectBooleanCheckbox value="#{right.execute}" disabled="#{_bean.editedItem.inherits or _bean.isReadOnly()}"/>
+            <p:selectBooleanCheckbox value="#{right.execute}" disabled="#{_bean.editedItem.inherits or _bean.isReadOnly()}">
+                <p:ajax process="@this" oncomplete="itemChange = 1;"/>
+            </p:selectBooleanCheckbox>
         </p:column>        
     </ui:define>
     
