--- a/escom-bpm-web/src/main/webapp/view/processes/elements/procedure-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/procedure-card.xhtml
@@ -8,7 +8,7 @@
 
     <ui:define name="specToolButtons" >
         <p:commandButton icon="ui-icon-disk" title="#{bundle.Save}" update="mainFRM"
-                         actionListener="#{_bean.onCloseCard('save')}"
+                         actionListener="#{_bean.onSaveAndCloseCard('save')}"
                          onclick="sendFormSize('#{_bean.getFormName()}');">
            <f:param name="isRequired" value="true"/>
        </p:commandButton>
