--- a/escom-bpm-web/src/main/webapp/view/processes/templ/proctempl-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/templ/proctempl-explorer.xhtml
@@ -9,7 +9,7 @@
     <ui:param name="_bean"        value="#{explorerTreeBean}" />
     <ui:param name="_treeBean"    value="#{processTypesTemplBean}" />
     <ui:param name="_detailBean"  value="#{procTemplBean}"/>
-    <ui:param name="_searcheBean" value="#{_detailBean}"/>
+    <ui:param name="_searcheBean" value="#{procTemplBean}"/>
     
     <ui:param name="_selectorHeader" value="#{_bean.getLabelFromBundle('ProcessTemplateSelector')}"/>
     <ui:param name="_explorerHeader" value="#{_bean.getLabelFromBundle('ProcessTemplates')}"/>
