--- a/escom-bpm-web/src/main/webapp/view/processes/templ/proctempl-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/templ/proctempl-card.xhtml
@@ -1,7 +1,8 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="/view/templ/templ-card.xhtml">
+                template="/view/templ/templ-card.xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html">
     
     <ui:param name="_bean" value="#{procTemplCardBean}"/>
 
@@ -15,13 +16,21 @@
                 </p:selectBooleanCheckbox>
                 
                 <p:outputLabel value="#{bundle.Name}:" indicateRequired="true"/>
-                <p:inputText id="nameItem" value="#{_bean.editedItem.name}"
-                             styleClass="ui-grid-col-12"
-                             onkeypress="checkEsc();"
-                             onchange="return itemChange = 1;"
-                             disabled="#{_bean.isReadOnly()}"
-                             required="#{param['isRequired'] == 'true'}"
-                             requiredMessage="#{bundle.Field} [#{bundle.Name}] #{bundle.MustBeFilled}"/>
+                <h:panelGroup id="groupNameItem" styleClass="ui-grid-col-12">
+                    <div class="ui-inputgroup">
+                    <p:inputText id="nameItem" value="#{_bean.editedItem.name}"
+                                 styleClass="ui-grid-col-12"
+                                 onkeypress="checkEsc();"
+                                 onchange="return itemChange = 1;"
+                                 disabled="#{_bean.isReadOnly()}"
+                                 required="#{param['isRequired'] == 'true'}"
+                                 requiredMessage="#{bundle.Field} [#{bundle.Name}] #{bundle.MustBeFilled}"/>
+                    <p:commandButton icon="ui-icon-script" title="#{bundle.MakeName}"
+                                disabled="#{_bean.isReadOnly()}"
+                                update="groupNameItem"
+                                actionListener="#{_bean.makeFullName()}"/>
+                    </div>
+                </h:panelGroup>
                 
                 <p:outputLabel value="#{bundle.StandardTermConcorded}:"/>
                 <p:spinner value="#{_bean.editedItem.termHours}" min="0" max="999" size="3" 
